--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -10,7 +10,7 @@
 }
 
 .seq-preloader {
-  background: white;
+  background: #a8e1ff;
   visibility: visible;
   opacity: 1;
   position: absolute;
@@ -181,20 +181,6 @@ nav ul li a {
 	font-size: 18px;
 }
 
-nav .mini-logo {
-	display: none;
-}
-
-nav .logo {
-	margin-top: 45px;
-	padding: 0px 20px;
-}
-
-nav .logo img {
-	max-width: 100%;
-	overflow-y: hidden;
-}
-
 nav ul {
 	margin-top: 60px;
   	text-align: left;
@@ -361,7 +347,7 @@ nav a:hover::before {
 	margin-right: 15px;
 }
 
-.first-content .main-btn a {
+.main-btn a {
 	display: inline-block;
 	border: 2px solid #fff;
 	padding: 8px 15px;
@@ -374,11 +360,11 @@ nav a:hover::before {
 	transition: all 0.5s;
 }
 
-.first-content .fb-btn {
+.fb-btn {
 	display: inline-block;
 }
 
-.first-content .fb-btn a {
+.fb-btn a {
 	display: inline-block;
 	background-color: #fff;
 	border: 2px solid #fff;
@@ -391,7 +377,7 @@ nav a:hover::before {
 	transition: all 0.5s;
 }
 
-.first-content .fb-btn a:hover {
+.fb-btn a:hover {
 	color: #fff;
 	background-color: transparent;
 }
@@ -442,8 +428,7 @@ nav a:hover::before {
 }
 
 .second-content a {
-	color: #fff;
-	text-decoration: underline;
+	color: #232323;
 }
 
 .second-content .main-btn a {
@@ -456,232 +441,6 @@ nav a:hover::before {
 	color: #fff;
 	text-decoration: none;
 	transition: all 0.5s;
-}
-
-
-.third-content {
-	text-align: left;
-	padding: 30px;
-}
-
-.third-content .container-fluid {
-	padding-right: 7.5px;
-	padding-left: 7.5px;
-}
-
-.third-content .first-section .left-content {
-	margin-right: 15px;
-	margin-top: 12px;
-}
-
-.third-content .first-section .right-image {
-	margin-left: 15px;
-}
-
-.third-content .second-section {
-	margin-top: 30px;
-}
-
-.third-content .second-section .right-content {
-	margin-left: 15px;
-	margin-top: 12px;
-}
-
-.third-content .second-section .left-image {
-	margin-right: 15px;
-}
-
-.third-content h2 {
-	font-size: 24px;
-	text-transform: uppercase;
-	font-weight: 700;
-	color: #fff;
-	letter-spacing: 0.5px;
-	border-bottom: 2px solid #fff;
-	display: inline-block;
-	padding-bottom: 10px;
-	margin-bottom: 20px;
-	margin-top: 0px;
-}
-
-.third-content p {
-	font-size: 13px;
-	color: #fff;
-	letter-spacing: 0.5px;
-	font-weight: 300;
-	line-height: 24px;
-	margin-bottom: 20px;
-}
-
-.third-content .main-btn a {
-	display: inline-block;
-	border: 2px solid #fff;
-	padding: 8px 15px;
-	font-size: 13px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	color: #fff;
-	text-decoration: none;
-	transition: all 0.5s;
-}
-
-.third-content .col-md-6 {
-	margin: 0px;
-	padding: 0px;
-}
-
-
-.fourth-content {
-	padding: 5px;
-}
-
-.fourth-content .container-fluid {
-	padding-right: 15px;
-	padding-left: 15px;
-}
-
-.fourth-content .container-fluid .col-md-4 {
-	padding-right: 0px;
-	padding-left: 0px;
-}
-
-.fourth-content .item {
-	margin: 10px;
-}
-
-.fourth-content .item img {
-	max-width: 100%;
-	overflow: hidden;
-}
-
-.fourth-content .item .thumb {
-	position: relative;
-}
-
-.fourth-content .item .hover-effect {
-	text-align: left;
-	position: absolute;
-	color: #fff;
-	background-color: rgba(0,0,0,0.95);
-	bottom: 0;
-	top: 0;
-	left: 0;
-	right: 0;
-	opacity: 0;
-	visibility: hidden;
-	transition: all 0.8s;
-}
-
-.fourth-content .item:hover .hover-effect {
-	opacity: 1;
-	visibility: visible;
-}
-
-.fourth-content .item .hover-effect .hover-content {
-	transform: translateY(-50%);
-    position: absolute;
-    text-align: left;
-    width: 100%;
-    top: 50%;
-    left: 0;
-    padding: 30px;
-}
-
-.fourth-content .item .hover-effect h2 {
-	font-size: 18px;
-	text-transform: uppercase;
-	font-weight: 700;
-	color: #fff;
-	letter-spacing: 0.5px;
-	border-bottom: 1px solid #fff;
-	display: inline-block;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-	margin-top: 0px;
-}
-
-.fourth-content .item .hover-effect p {
-	font-size: 13px;
-	text-transform: uppercase;
-	letter-spacing: 0.5px;
-	line-height: 22px;
-	padding-bottom: 0px;
-	margin-bottom: 0px;
-}
-
-
-
-.fifth-content .container-fluid {
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-.fifth-content .container-fluid .col-md-6 {
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-.fifth-content #map {
-	padding: 50px 0px 50px 50px;
-}
-
-.fifth-content #contact {
-	padding: 50px 50px 50px 50px;
-}
-
-.fifth-content input {
-  border-radius: 0px;
-  padding-left: 15px;
-  font-size: 13px;
-  font-weight: 300;
-  color: #fff;
-  background-color: rgba(250, 250, 250, 0.15);
-  outline: none;
-  border: none;
-  box-shadow: none;
-  line-height: 40px;
-  height: 40px;
-  width: 100%;
-  margin-bottom: 25px;
-}
-
-.fifth-content textarea {
-  border-radius: 0px;
-  padding-left: 15px;
-  padding-top: 10px;
-  font-size: 13px;
-  font-weight: 300;
-  color: #fff;
-  background-color: rgba(250, 250, 250, 0.15);
-  outline: none;
-  border: none;
-  box-shadow: none;
-  height: 165px;
-  max-height: 220px;
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 25px;
-}
-
-.fifth-content button {
-	max-width: 100%;
-	width: 100%;
-    display: inline-block;
-	border: 2px solid #fff;
-	padding: 8px 15px;
-	font-size: 13px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	color: #fff;
-	text-decoration: none;
-	background-color: transparent;
-	border-radius: 0px;
-	transition: all 0.5s;
-}
-
-.fifth-content button:hover {
-	color: #232323;
-	background-color: #fff;
 }
 
 .footer .content {
@@ -734,48 +493,12 @@ nav a:hover::before {
 		margin-bottom: 45px;
 	}
 
-	.third-content .first-section .left-content {
-		margin-right: 0px;
-		margin-bottom: 30px;
-	}
-
-	.third-content .first-section .right-image {
-		margin-left: 0px;
-	}
-
-	.third-content .second-section .right-content {
-		margin-left: 0px;
-		margin-top: 30px;
-	}
-
-
-	.third-content .second-section .left-image {
-		margin-right: 0px;
-	}
-
-	.fifth-content #map {
-		padding: 30px 30px 30px 30px;
-	}
-
-	.fifth-content #contact {
-		padding: 30px 30px 30px 30px;
-	}
-
 }
 
 @media (max-width: 749px) {
 
 	nav {
 		width: 15vh;
-	}
-
-	nav .logo {
-		display: none;
-	}
-
-	nav .mini-logo {
-		margin-top: 60px;
-		display: block;
 	}
 
 	nav ul {
@@ -808,19 +531,6 @@ nav a:hover::before {
 	.second-content .left-content {
 		padding: 30px;
 		text-align: left;
-	}
-
-	.fourth-content .item .hover-effect h2 {
-		font-size: 15px;
-	}
-
-
-	.fifth-content #map {
-		padding: 15px 15px 15px 15px;
-	}
-
-	.fifth-content #contact {
-		padding: 15px 15px 15px 15px;
 	}
 
 }
