--- a/css/main.css
+++ b/css/main.css
@@ -1,88 +1,49 @@
-
-@keyframes seq-preloader {
-  50% {
-    opacity: 1;
-  }
-  
-  100% {
-    opacity: 0;
-  }
-}
-
-.seq-preloader {
-  background: #a8e1ff;
-  visibility: visible;
-  opacity: 1;
-  position: absolute;
-  z-index: 9999;
-  height: 100%;
-  width: 100%;
+ .loader-mask {
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-}
-
-.seq-preloader.seq-preloaded {
-  opacity: 0;
-  visibility: hidden;
-  transition: visibility 0s .5s, opacity .5s;
-}
-
-.seq-preload-indicator {
-  overflow: visible;
-  position: relative;
-  top: 50%;
+  background-color: #616161;
+  z-index: 99999; }
+.loader {
+  position: absolute;
   left: 50%;
-  transform: translate(-50%, -50%);
-}
+  top: 50%;
+  font-size: 5px;
+  width: 5em;
+  height: 5em;
+  margin: -25px 0 0 -25px;
+  text-indent: -9999em;
+  border-top: 0.5em solid #191919;
+  border-right: 0.5em solid rgba(245, 245, 245, 0.5);
+  border-bottom: 0.5em solid rgba(245, 245, 245, 0.5);
+  border-left: 0.5em solid rgba(245, 245, 245, 0.5);
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear; }
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em; }
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
 
-.seq-preload-circle {
-  display: inline-block;
-  height: 12px;
-  width: 12px;
-  fill: #7a7a7a;
-  opacity: 0;
-  animation: seq-preloader 1.25s infinite;
-}
-
-.seq-preload-circle-2 {
-  animation-delay: .15s;
-}
-
-.seq-preload-circle-3 {
-  animation-delay: .3s;
-}
-
-.seq-preload-indicator-fallback {
-  width: 42px;
-  overflow: visible;
-}
-
-.seq-preload-indicator-fallback .seq-preload-circle {
-  width: 8px;
-  height:8px;
-  background-color: #f4f4f4;
-  border-radius: 100%;
-  opacity: 1;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.seq-preload-indicator-fallback .seq-preload-circle-2 {
-  margin-left: 3px;
-  margin-right: 3px;
-  width: 12px;
-  height: 12px;
-}
-
-.seq-preload-indicator-fallback .seq-preload-circle-3 {
-  width: 16px;
-  height: 16px;
-}
-.tlinks{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
-
-/* MAIN CSS */
 
 @-webkit-keyframes fill {
   0% {
@@ -229,13 +190,13 @@ nav a::before {
 }
 nav a:hover {
 	text-decoration: none;
-  -webkit-animation: fillColour 0.7s forwards ease-in-out;
-          animation: fillColour 0.7s forwards ease-in-out;
+	-webkit-animation: fillColour 0.7s forwards ease-in-out;
+    animation: fillColour 0.7s forwards ease-in-out;
 }
 nav a:hover::before {
-  -webkit-animation: fill 0.7s forwards ease-in-out;
-          animation: fill 0.7s forwards ease-in-out;
-  opacity: 1;
+	-webkit-animation: fill 0.7s forwards ease-in-out;
+    animation: fill 0.7s forwards ease-in-out;
+	opacity: 1;
 }
 
 .slides {
@@ -291,14 +252,10 @@ nav a:hover::before {
 .slides .slide img {
   width: 100%;
 }
-
-
 .main-btn a:hover {
 	background-color: #fff;
 	color: #232323!important;
 }
-
-
 .first-content {
 	padding: 100px;
 	text-align: left;
@@ -464,9 +421,6 @@ nav a:hover::before {
 	color: #aaa;
 	text-decoration: none;
 }
-
-
-
 /* REPONSIVE */
 
 @media (max-width: 991px) {
